--- a/Rockman/Rockman.vcxproj.filters
+++ b/Rockman/Rockman.vcxproj.filters
@@ -147,9 +147,6 @@
     <ClCompile Include="Spine.cpp">
       <Filter>ObjectGame\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="IceMan.cpp">
-      <Filter>ObjectGame\Boss</Filter>
-    </ClCompile>
     <ClCompile Include="CutMan.cpp">
       <Filter>ObjectGame\Boss</Filter>
     </ClCompile>
@@ -209,6 +206,9 @@
     </ClCompile>
     <ClCompile Include="Ramie.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoomMan.cpp">
+      <Filter>ObjectGame\Boss</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -296,9 +296,6 @@
     <ClInclude Include="Spine.h">
       <Filter>ObjectGame\Enemies</Filter>
     </ClInclude>
-    <ClInclude Include="IceMan.h">
-      <Filter>ObjectGame\Boss</Filter>
-    </ClInclude>
     <ClInclude Include="CutMan.h">
       <Filter>ObjectGame\Boss</Filter>
     </ClInclude>
@@ -358,6 +355,9 @@
     </ClInclude>
     <ClInclude Include="Ramie.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoomMan.h">
+      <Filter>ObjectGame\Boss</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
